# energy-grid-balancing-game

./: .gitignore  README.md  app.py  dev_playground.ipynb  pyproject.toml
data/: Energy balances.xlsx  SUMMARY-results-SHARES-2020.xlsx
energy-grid-balancing-game/: dev_playground.ipynb  generators.py  sources_and_sinks.py  streamlit_app.py
energy-grid-balancing-game/classes/: generators.py
energy_grid_balancing_game/: calculate_production.py  dev_playground.ipynb  gameplay.py  generators.py  power_generation_and_consumption.csv  sources_and_sinks.py  streamlit_app.py  utils.py
src/: gameplay.py  generators.py  grid.py  opt_utils.py  optimum_solutions.ipynb  power_generation_and_consumption.csv  utils.py  weekly_optimum.json
tasks/: tasks_and_ideas.md
