[tool.poetry]
name = "energy_grid_balancing_game"
version = "0.1.0"
description = "Game to balance energy generators in the electricity grid"
authors = ["Robert Dibble <robertdibble@live.co.uk>"]
readme = "README.md"
repository = "https://github.com/dibble07/energy-grid-balancing-game"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4"
ipykernel = "^6"
pandas = ">=2.1.0"
matplotlib = "^3"
streamlit = "^1"
altair = "^5"
numpy = "^1"
openpyxl = "^3"
black = {version = "^23", extras = ["jupyter"]}
scipy = "^1"
tqdm = "^4"
jupyter = "^1"
ipywidgets = "^8"
seaborn = "^0"
pqdm = "^0"

[tool.poetry.group.dev.dependencies]
icecream = "^2"
black = "^23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
